apps/emby/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: emby
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-01"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: emby
  sessionAffinity: None
  type: LoadBalancer
